Sun Jun 16 21:41:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_2comp): Extracted from get2comp.
	  (integer_unpack_num_bdigits): Extracted from
	  rb_integer_unpack_internal.
	  (bary_unpack_internal): Renamed from bary_unpack and support
	  INTEGER_PACK_2COMP.
	  (bary_unpack): New function to validate arguments and invoke
	  bary_unpack_internal.
	  (rb_integer_unpack_internal): Removed.
	  (rb_integer_unpack): Invoke bary_unpack_internal.
	  (rb_integer_unpack_2comp): Removed.

	* internal.h (rb_integer_unpack_2comp): Removed.

	* pack.c: Follow the above change.

Sun Jun 16 18:41:42 2013  Tanaka Akira  <akr@fsij.org>

	* internal.h (INTEGER_PACK_2COMP): Defined.
	  (rb_integer_pack_2comp): Removed.

	* bignum.c (bary_pack): Support INTEGER_PACK_2COMP.
	  (rb_integer_pack): Invoke bary_pack directly.
	  (rb_integer_pack_2comp): Removed.
	  (rb_integer_pack_internal): Ditto.
	  (absint_numwords_generic): Follow the above change.

	* pack.c (pack_pack): Ditto.

	* sprintf.c (rb_str_format): Ditto.

Sun Jun 16 17:48:14 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (absint_numwords_generic): rb_funcall invocations removed.

Sun Jun 16 16:04:38 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/config_files.rb: use URI.read to allow it runs with Ruby 1.8.5.

Sun Jun 16 14:32:25 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_pack) Extracted from rb_integer_pack_internal.
	  (absint_numwords_generic): Use bary_pack.

Sun Jun 16 11:01:57 2013  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS (XMLRPC::Client#http): Add.
	  [ruby-core:55197] [Feature #8461]

Sun Jun 16 10:38:45 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_add): New function.
	  (bary_zero_p): Extracted from bigzero_p.
	  (absint_numwords_generic): Use bary_zero_p and bary_add.
	  (bary_mul): Fix an argument for bary_mul_single.
	  (bary_divmod): Use size_t for arguments.

Sun Jun 16 08:55:22 2013  Tanaka Akira  <akr@fsij.org>
